--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.1.2",
     "dotenv": "^4.0.0",
     "mocha": "^4.0.1",
-    "nyc": "^11.2.1"
+    "nyc": "^11.2.1",
+    "request": "^2.83.0"
   }
 }
