--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/hermansenph/continuous-delivery#readme",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "dotenv": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "dotenv": "^4.0.0",
     "mocha": "^4.0.1",
     "nyc": "^11.2.1",
     "request": "^2.83.0"
