--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "homepage": "https://github.com/hermansenph/continuous-delivery#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "dotenv": "^4.0.0"
+    "mongodb": "^2.2.33",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
