--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "lint:html": "htmlhint ./**/*.html",
     "lint:css": "stylelint ./**/*.css",
     "lint:js": "eslint ./**/*.js",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "bundle": "browserify index.js -t babelify -o main.js",
+    "sync": "browser-sync start --server --no-open --port 3000 --files ./main.js",
+    "bundle:watch": "watchify index.js -vd -t babelify -o main.js",
+    "watch": "npm-run-all --parallel bundle:watch sync"
   },
   "repository": {
     "type": "git",
@@ -33,7 +37,9 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -46,6 +52,14 @@
     "eslint-plugin-node": "5.1.1",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-react": "7.3.0",
-    "eslint-plugin-standard": "3.0.1"
+    "eslint-plugin-standard": "3.0.1",
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babelify": "8.0.0",
+    "browser-sync": "2.18.13",
+    "browserify": "14.5.0",
+    "npm-run-all": "4.1.1",
+    "watchify": "3.9.0"
   }
 }
