--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lint:css": "stylelint ./**/*.css",
     "lint:js": "eslint ./**/*.js",
     "precommit": "npm run lint",
-    "bundle": "browserify index.js -t babelify -o main.js",
-    "sync": "browser-sync start --server --no-open --port 3000 --files ./main.js",
-    "bundle:watch": "watchify index.js -vd -t babelify -o main.js",
+    "bundle": "browserify ./server/index.js -t babelify -o ./server/public/main.js",
+    "sync": "browser-sync start --server --no-open --port 3000 --files ./server/public/main.js",
+    "bundle:watch": "watchify ./server/index.js -vd -t babelify -o ./server/public/main.js",
     "watch": "npm-run-all --parallel bundle:watch sync"
   },
   "repository": {
