--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "lint:css": "stylelint ./**/*.css",
     "lint:js": "eslint ./**/*.js",
     "precommit": "npm run lint",
-    "bundle": "browserify ./server/index.js -t babelify -o ./server/public/main.js",
+    "bundle": "browserify ./client/index.js -t babelify -o ./server/public/main.js",
     "sync": "browser-sync start --server --no-open --port 3000 --files ./server/public/main.js",
     "bundle:watch": "watchify ./server/index.js -vd -t babelify -o ./server/public/main.js",
     "watch:server": "nodemon server",
     "watch:client": "watchify ./client/index.js -vd -t babelify -o ./server/public/main.js",
     "watch:sync": "browser-sync start -c sync.js",
-    "watch": "npm-run-all --parallel watch:*"
+    "watch": "npm-run-all --parallel watch:*",
+    "heroku-postbuild": "browserify ./client/index.js -t babelify -o ./server/public/main.js"
   },
   "repository": {
     "type": "git",
